[tool.poetry]
name = "csv-to-excel-converter"
version = "0.1.0"
description = "Command-line tool to convert CSV-files (.csv) to Excel-files (.xlsx)"
authors = ["Malthe Jørgensen <malthe.jorgensen@gmail.com>"]
license = "MIT"

packages = [
    { include = "csvtoexcel"},
]

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
csvtoexcel = "csvtoexcel.csvtoexcel:main"
exceltocsv = "csvtoexcel.exceltocsv:main"
